# voice-core

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.session-reports/: 2026-03-07-0852.md
docs/plans/: 2026-03-06-spanish-acoustics.md  2026-03-09-app-integration-prompts.md  2026-03-09-shared-review-and-analyses-design.md  2026-03-09-shared-review-plan.md
docs/superpowers/plans/: 2026-03-12-shared-converse-autodetect.md
docs/superpowers/specs/: 2026-03-12-shared-converse-autodetect-design.md
frontend/: audio_worklet.js  biofeedback_widgets.js  converse.js  nav.js  recording_control.js  review.js  theme.css  user_api.js  user_gate.js  vad.js  video_features.js
scripts/: mfa-server.py
src/voice_core/: __init__.py  analyze.py  converse.py  diagnostics.py  display_pipeline.py  live.py  phoneme_align.py  research.py  safety_monitor.py  segment.py  spanish.py  spanish_consonants.py  spanish_stress.py  video_monitor.py  vowel_accumulator.py  world_convert.py
src/voice_core/data/: spanish_vowel_norms.json  vowel_norms.json
tests/: test_converse.py  test_display_pipeline.py  test_falsetto_detector.py  test_imports.py  test_live_vowel_hook.py  test_phoneme_align.py  test_resonance_pipeline.py  test_spanish.py  test_spanish_consonants.py  test_spanish_stress.py  test_spanish_vowel_norms.py  test_vowel_accumulator.py
